<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.troblecodings</groupId>
	<artifactId>Launcher</artifactId>
	<packaging>jar</packaging>
	<version>1.0.260</version>
	<name>girc-launcher</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<javafx.version>18.0.1</javafx.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/java/</directory>
				<includes>
					<include>com/troblecodings/launcher/assets/*.png</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java/</directory>
				<includes>
					<include>com/troblecodings/launcher/assets/*.css</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java/</directory>
				<includes>
					<include>com/troblecodings/launcher/assets/*.dat</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java/</directory>
				<includes>
					<include>*.xml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java/</directory>
				<includes>
					<include>com/troblecodings/launcher/*.txt</include>
				</includes>
			</resource>
		</resources>


		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<jdkToolchain>
						<version>1.8</version>
					</jdkToolchain>
					<verbose>false</verbose>
					<useIncrementalCompilation>false</useIncrementalCompilation>
					<executable>${env.JAVA_HOME}/bin/javac</executable>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>
										com.troblecodings.launcher.Launcher
									</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>com.troblecodings.launcher.Launcher</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>u-team-repo</id>
			<url>https://repo.u-team.info</url>
		</repository>
		<repository>
			<id>repo2</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>com.github.Querz</groupId>
			<artifactId>NBT</artifactId>
			<version>6.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.18.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.18.0</version>
		</dependency>

		<dependency>
			<groupId>net.hycrafthd</groupId>
			<artifactId>minecraft_authenticator</artifactId>
			<version>1.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.0</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20220320</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>

</project>
